# micros_dynamic_objects_filter

./: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.user.6cd0554  CMakeLists.txt~  README.md  package.xml  package.xml~
launch/: filter_node.launch  filter_node.launch~
src/: filter_node.cpp  moving_object_filter.cpp  moving_object_filter.cpp.autosave  moving_object_filter.h  optical_flow.cpp  optical_flow.h  umath.h
test/ExtractionObject/: CMakeLists.txt  CMakeLists.txt~  main.cpp
test/canny/: CMakeLists.txt~  canny.cpp
test/canny-build/: CMakeCache.txt  Makefile  canny.cbp  cmake_install.cmake
test/canny01/: CMakeLists.txt~  canny.cpp
test/detection/: CMakeLists.txt  CMakeLists.txt~  filter.cpp  filter.cpp~  filter.h  filter.h~  moving_object_filter.cpp
test/moving_object_detection-build/: CMakeCache.txt  Makefile  cmake_install.cmake  moving_object_filter.cbp
test/pcl_segmentation/: CMakeLists.txt  CMakeLists.txt~
test/pcl_segmentation/data/data02/output_cloud5/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cloud_cluster_7.pcd
test/pcl_segmentation/src/: OpenniPclViewer.cpp~  ground_filters.cpp~  image_proc.cpp~  kinect.cpp~  openni_viewer_simple.cpp~  pcl_segmentation.cpp  pcl_segmentation.cpp~
test/warpImage/: CMakeLists.txt  CMakeLists.txt~  wapImage.cpp~  warpImage.cpp
